# social-media-automation-platform

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  dockerfile.frontend  get_linkedin_token.py  main_terminal.py  pyproject.toml  requirements.txt  setup_db.py  setup_rag.py  temp_tokens.json
Frontend/: Dockerfile
agents/: human_approval_agent.py  linkedin_agent.py  publisher_agent.py  rag_agent.py  research_agent.py  reviewer_agent.py  superviser_agent.py  twitter_agent.py
api/: auth.py  main.py  schemas.py
api/routes/: accounts.py  auth.py  oauth.py  posts.py  users.py
backend/: Dockerfile  Dockerfile.frontend
dashboard/: ui.py
database/: connection.py  models.py  queries.py
docs/: twitter_posts.txt
graph/: state.py  workflow.py
mcp_servers/: linkedin_server.py  search_server.py  twitter_server.py
rag/: chunking.py  embedding.py  loader.py  retriever.py
tests/: test_auth.py  test_post.py  test_users.py
