[project]
name = "ai-social-media-automation-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "chromadb>=1.5.9",
    "fastapi>=0.138.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-mcp-adapters>=0.3.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "tweepy>=4.16.0",
    "uvicorn>=0.49.0",
]
